--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   font-style: italic;
 }
 
+/*MediaQuery*/
 header .navbar {
   display: flex;
   background-color: darksalmon !important;
@@ -17,9 +18,13 @@ header .navbar-brand img {
 }
 
 /*header quien soy*/
-.texto2, .texto3, .texto4, .texto5 {
+.texto2,
+.texto3,
+.texto4,
+.texto5,
+.titulo {
   display: flex;
-  background-color: #F08080;
+  background-color: #f08080;
 }
 
 .img8 {
@@ -30,7 +35,7 @@ header .navbar-brand img {
 }
 
 body {
-  background-image: url(/imagenes/pexels-engin-akyurt-9807347.jpg);
+  background-image: url(../imagenes/pexels-engin-akyurt-9807347.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -39,12 +44,50 @@ body .section1 .h2 .p {
 }
 
 /*fotos*/
-.img2, .img3, .img5, .img6, .img7 {
+.img2,
+.img3,
+.img5,
+.img6,
+.img7 {
   display: inline-block;
   position: relative;
   justify-content: center;
   width: 250px;
   height: 300px;
+}
+
+.fotos-1,
+.fotos-2,
+.fotos-3,
+.fotos-4 {
+  width: 250px;
+  height: 250px;
+  margin: 20px;
+}
+
+.etiqueta .foto-5,
+.etiqueta .foto-6,
+.etiqueta .foto-7,
+.etiqueta .foto-8 {
+  width: 250px;
+  height: 250px;
+  margin: 20px;
+}
+
+/*gradientes*/
+.gradient-lineal {
+  width: 250px;
+  height: 220px;
+  background: linear-gradient(to bottom, #f270ec, #9c53c9);
+  margin: 20px;
+  justify-self: center;
+}
+
+.gradient-radial {
+  width: 250px;
+  height: 220px;
+  background: radial-gradient(circle, #f270ec, #9c53c9);
+  margin-left: 20px;
 }
 
 /*estilo quiensoy.html*/
@@ -59,8 +102,41 @@ body .section1 .h2 .p {
   height: 20rem;
 }
 
+.contenido-asesorias {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.videos-rutinas {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.ig-video {
+  max-width: 50%;
+  max-height: 50%;
+  margin: 1rem;
+}
+
+.imagenes-homepage {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
 footer {
-  background-color: #AF7AC5;
+  background-color: #af7ac5;
   display: flex;
   justify-content: space-around;
   margin: 10px;
