--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,30 +1,28 @@
-header{
-    .navbar{
-        display: flex;
-        background-color: darksalmon !important;
-        cursor: pointer;
-    }
-    .navbar-brand img{
-        width: 250px;
-        height: 100px;
-    }
-    }
-        
-
+header {
+  .navbar {
+    display: flex;
+    background-color: darksalmon !important;
+    cursor: pointer;
+  }
+  .navbar-brand img {
+    width: 250px;
+    height: 100px;
+  }
+}
 
 /*header quien soy*/
 
-.texto2, .texto3, .texto4, .texto5{
-    display: flex;
-    background-color: #F08080;
-
+.texto2,
+.texto3,
+.texto4,
+.texto5,
+.titulo {
+  display: flex;
+  background-color: #f08080;
 }
-.img8{
-    justify-content: center;
-    position: relative;
-    width: 250px;
-    height: 100px;
+.img8 {
+  justify-content: center;
+  position: relative;
+  width: 250px;
+  height: 100px;
 }
-
-
-
