--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: #af7ac5;
+  background-color: darksalmon;
   display: flex;
 
   justify-content: space-around;
@@ -11,6 +11,7 @@ footer {
     color: antiquewhite;
   }
 }
+
 
 .mapa {
   margin: 10px;
