--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,9 +1,12 @@
 header {
   .navbar {
     display: flex;
-    background-color: darksalmon !important;
+    background-color: #FEE140;
+    background-image: linear-gradient(270deg, #FEE140 0%, #FA709A 87%);
+
     cursor: pointer;
   }
+
   .navbar-brand img {
     width: 250px;
     height: 100px;
@@ -20,6 +23,7 @@ header {
   display: flex;
   background-color: #f08080;
 }
+
 .img8 {
   justify-content: center;
   position: relative;
