--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     /*font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;*/
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Dancing Script', cursive;
+    font-size:large;
     /*font-style: italic;*/
 }
 
