--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,26 +1,26 @@
+ @import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&family=Kalam:wght@300&display=swap');
+
 @mixin sizes($widght, $height) {
   width: $widght;
   height: $height;
 }
 
 body {
-  .section1 {
-    .h2 {
-      .titulo-pagina {
-        display: inline-flex;
+  .section1, .titulo-pagina {
+        display: flex;
         text-align: center;
-        margin: 35px;
-        font-family: 'Fasthand';
+        margin: 20px;
+        font-family: 'Dancing Script', cursive;
+        font-size: 48px;
       }
-    }
   }
 
-}
-
-/*body {
+body {
   background-image: url(../imagenes/pexels-engin-akyurt-9807347.jpg);
   background-size: cover;
-  background-repeat: no-repeat;*/
+  background-repeat: no-repeat;
 
 .section1 {
   .h2 {
@@ -31,21 +31,14 @@ body {
 }
 
 /*fotos*/
-.img2,
-.img3,
-.img5,
-.img6,
-.img7 {
+.imghome {
   display: inline-block;
   position: relative;
   justify-content: center;
   @include sizes(250px, 300px);
 }
 
-.fotos-1,
-.fotos-2,
-.fotos-3,
-.fotos-4 {
+.fotos-asesorias {
   @include sizes(250px, 260px);
   margin: 20px;
   display: inline-block;
@@ -94,43 +87,59 @@ body {
   margin: 10px;
 }
 
-.marcas {
-  .titulo-marcas{
-    justify-content: center;
-    text-align: center;
-  }
-  .foto-5,
-  .foto-6,
-  .foto-7,
-  .foto-8 {
-    @include sizes(150px, 150px);
+.h3{
+  display: flex;
+  justify-content: center;
+}
+
+.Fotos-servicios {
+  display: flex;
+  justify-content: center;
+}
+
+.marcas{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   .fotos-marcas{
+    @include sizes (100%, 150px);
     margin: 20px;
-    display: inline-flex;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    position: relative;
   }
+}
+
+
+.titulo-marcas{
+  text-align: center;
+  font-family: 'Kalam', cursive;
+  margin-top: 10px;
 }
 
 /*gradientes*/
 .gradient-lineal {
-  @include sizes(250px, 220px);
+  @include sizes(290px, 220px);
   display: flex;
   background: linear-gradient(to bottom, #f270ec, #9c53c9);
+  background-size: cover;
   margin: 20px;
   justify-self: center;
   padding: 10px;
   text-align: justify;
+  font-family: 'Kalam', cursive;
 }
 
 .gradient-lineal-marcas {
-  @include sizes(725px, 250px);
+  @include sizes(95%, 250px);
   display: flex;
   background: linear-gradient(to bottom, #f270ec, #9c53c9);
   margin: 20px;
   justify-self: center;
   padding: 10px;
   text-align: justify;
+  justify-content: space-between;
+  font-family: 'Kalam', cursive;
 }
 
 .gradient-lineal-1,
@@ -140,6 +149,7 @@ body {
   margin-left: 20px;
   padding: 10px;
   text-align: justify;
+  font-family: 'Kalam', cursive;;
 }
 
 .gradient-lineal-as {
@@ -147,9 +157,11 @@ body {
   background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
   padding: 10px;
   text-align: justify;
+  font-family: 'Kalam', cursive;
 
   .texto-turnos {
     margin: 10px;
+    font-family: 'Kalam', cursive;
   }
 }
 
@@ -159,6 +171,7 @@ body {
   margin-left: 20px;
   padding: 10px;
   text-align: justify;
+  font-family: 'Kalam', cursive;
 }
 
 
@@ -211,9 +224,34 @@ body {
 
 
 .h4,
-.subtitulo-marcas {
+.subtitulo-marcas, .h3 {
   margin: 15px;
   justify-content: center;
   text-align: center;
-
 }
+}
+
+.Foto-Servicio {
+  @include sizes(15rem, 15rem);
+  position: relative;
+  display: flex;
+  margin: 2rem;
+}
+
+.boton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-80%, +120%);
+  padding: 10px 20px;
+  background-color:#FAACA8;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.boton:first-child {
+  top: 10px;
+  left: 10px;
+}
+
