--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&family=Kalam:wght@300&display=swap');
+
 footer {
   background-color: #FEE140;
   background-image: linear-gradient(90deg, #FEE140 0%, #FA709A 87%);
