--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&family=Kalam:wght@300&display=swap');
+
 header {
   .navbar {
     display: flex;
     background-color: #FEE140;
     background-image: linear-gradient(270deg, #FEE140 0%, #FA709A 87%);
+
+    .nav-link {
+      font-family: 'Kalam', cursive;
+    }
 
     cursor: pointer;
   }
